# LEDAS-test-task

./: CMakeLists.txt  README.md
include/: segment-3d.hpp  vector-3d.hpp
src/: main.cpp  segment-3d.cpp  vector-3d.cpp
test/: segment-test.cpp  test.cpp  tests.cpp  vector-test.cpp
